package liuwei.abstractFactory1;

/**
 * @Title: ComboBox
 * @Description: TODO(用一句话描述该文件做什么)
 * @author: caoyue
 * @date: 2020/2/15 19:54
 * @最后修改人: caoyue
 * @最后修改时间: 2020/2/15 19:54
 * @company: shopin.net
 * @version: V1.0
 */

public interface ComboBox {
    public void display();
}
